log content: fix getting line-height to make log readable
The log text really stuck together, making it very hard to read.
Probably due to a copy-pasta mistake the line-height was queried from
the font-size map, so just use the correct line-height map instead.

--- a/scss/_miscellaneous.scss
+++ b/scss/_miscellaneous.scss
@@ -74,7 +74,7 @@ hr,
     white-space: pre;
     font-size: map-get($font-size, "body-small");
     font-family: $pwt-font-monospace;
-    line-height: map-get($font-size, "body-small");
+    line-height: map-get($line-height, "body-small");
 }
 
 .pwt-no-outline {
